@@ -6,10 +6,10 @@
 class Controller extends CController
 {
 	/**
-	 * @var string the default layout for the controller view. Defaults to 'column1',
+	 * @var string the default layout for the controller view. Defaults to 'application.views.layouts.column1',
 	 * meaning using a single column layout. See 'protected/views/layouts/column1.php'.
 	 */
-	public $layout='column1';
+	public $layout='application.views.layouts.column1';
 	/**
 	 * @var array context menu items. This property will be assigned to {@link CMenu::items}.
 	 */
