@@ -7,6 +7,7 @@ Version 1.1.1 to be released
 - Bug #816: CUniqueValidator did not work with CFormModel (Qiang)
 - Bug #839: typo in CFormatter about calling method_exists() (Qiang)
 - Bug #865: CWidgetFactory didn't set the owner of the newly created widgets correctly (Qiang)
+- Bug #871: A module generated by the yiic module command did not use the application layout by default (Qiang)
 - Bug: Setting the 'with' option in criteria array doesn't trigger eager loading for AR (Qiang)
 - Bug: CActiveRecord should update oldPrimaryKey after calling save() (Qiang)
 - Enh #872: Added CFlexWidget::allowFullScreen (Qiang)
